# pyasc

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  OAT.xml  README.md  SECURITY.md  classify_rule.yaml  pyproject.toml  requirements-build.txt  requirements-runtime.txt  setup.py  torch_npu_install.sh
docs/: API_docstring_generation_tool_guide.md  Makefile  README.md  architecture_introduction.md  codestyle.rst  conf.py  developer_guide.md  index.rst  op_debug_prof.md  python_syntax_support.md  quick_start.md
docs/python-api/: index.md
docs/python-api/language/: adv.md  basic.md  core.md  fwk.md  index.md
docs/python-api/lib/: host.md  index.md
docs/python-api/rst/language/: adv.rst  basic.rst  core.rst  fwk.rst  index.rst
docs/python-api/rst/lib/: host.rst  index.rst
include/: CMakeLists.txt
include/ascir/: CMakeLists.txt
include/ascir/API/: CMakeLists.txt  Types.td
include/ascir/Dialect/Asc/: CMakeLists.txt
include/ascir/Dialect/Asc/IR/: Asc.h  AscFuncTrait.h  Base.td  CMakeLists.txt  Dialect.td  Interfaces.td  Ops.td
include/ascir/Dialect/Asc/Transforms/: CMakeLists.txt  Passes.h  Passes.td
include/ascir/Dialect/Asc/Utils/: Attributes.h  Utils.h
include/ascir/Dialect/EmitAsc/IR/: Attributes.td  CMakeLists.txt  Dialect.td  EmitAsc.h  Ops.td  Types.td
include/ascir/Dialect/EmitAsc/Utils/: Attributes.h
include/ascir/Dialect/Utils/: ConstantOpBuilder.h  Inlining.h  Registration.h  Utils.h
lib/: CMakeLists.txt
lib/Dialect/: CMakeLists.txt
lib/Dialect/Asc/: CMakeLists.txt
lib/Dialect/Asc/IR/: Attributes.cpp  CMakeLists.txt  Dialect.cpp  OpInterfaces.cpp  Ops.cpp  TypeInterfaces.cpp  Types.cpp
lib/Dialect/Asc/Transforms/: CMakeLists.txt  DeclarePyStructPass.cpp  DefineCubeOnlyPass.cpp  DetectEnableDebugPass.cpp  DetectKernelTypePass.cpp  EraseSync.cpp  GenerateBoilerplatePass.cpp  HoistQueBind.cpp  HoistUBAllocation.cpp  InputOutputTensor.cpp  InsertSync.cpp  LegalizeKernelArgs.cpp  MaterializeTensor.cpp  Noop.cpp  PrivatizeFunc.cpp  UnifyPipe.cpp  VerifySync.cpp
lib/Dialect/Asc/Utils/: CMakeLists.txt  Utils.cpp
lib/Dialect/EmitAsc/: CMakeLists.txt
lib/Dialect/EmitAsc/IR/: Attributes.cpp  CMakeLists.txt  Dialect.cpp  Ops.cpp  Types.cpp
lib/TableGen/: CMakeLists.txt  GenAPITypedefs.cpp  GenAPITypes.cpp  GenOpEmitDecls.cpp  GenOpEmitDefs.cpp  GenPybindDefs.cpp  GenPybindDefsTypes.cpp  PrintDecls.cpp  Utils.cpp  main.cpp
lib/TableGen/include/: Constant.h  Utils.h
python/asc/language/: __init__.py
python/asc/language/adv/: activation.py  matmul.py  utils.py
python/asc/language/basic/: __init__.py  block_sync.py  common.py  data_copy.py  determine_compute_sync.py  dump_tensor.py  fixpipe.py  list_tensor.py  mm.py  proposal.py  scalar.py  sys_var.py  utils.py  vec_binary.py  vec_binary_scalar.py  vec_brcb.py  vec_cmpsel.py  vec_gather.py  vec_gather_mask.py  vec_reduce.py  vec_ternary_scalar.py  vec_vconv.py
python/asc/language/core/: __init__.py  enums.py  ir_value.py  memory_allocator.py  tensor.py  types.py  utils.py
python/asc/language/fwk/: tpipe.py  utils.py
python/asc/lib/host/: loader.py
python/asc/lib/host/bindings/: Enums.cpp  MatmulApiTiling.cpp
python/asc/lib/runtime/: build_utils.py  npu_utils.cpp  print_utils.cpp  print_utils.py  rt_wrapper.cpp
python/asc/runtime/: compiler.py  config.py  jit.py  launcher.py
python/src/: .clang-tidy  CMakeLists.txt  IR.cpp  InitFuncDef.h  Module.cpp  OpBuilder.cpp  Passes.cpp  Translation.cpp
python/test/: test_import.py
python/test/generalization/adv/: test_matmul.py  test_matmul_iterate_all.py  test_matmul_iterate_batch.py  test_matmul_quant.py  test_quant.py
python/test/generalization/basic/: test_aipp.py  test_axpy.py  test_copy.py  test_duplicate.py  test_trans_5hd_addr_tensor.py  test_trans_5hd_tensor_list.py  test_transpose.py  test_transpose_ext.py  test_vadd.py  test_vadd_bits.py  test_vadd_l0.py  test_vadd_sw.py  test_vadd_tiling.py  test_vadds.py  test_vsqrt.py
python/test/kernels/: conftest.py  test_bilinear_interpolation.py  test_matmul.py  test_matmul_torch.py  test_vadd.py
python/test/kernels/insert_sync/: test_matmul.py  test_quant.py  test_quant_dynamic.py  test_softmax.py  test_vadd.py  test_vadd_scalar.py
python/test/unit/: conftest.py
python/test/unit/codegen/: test_function_visitor.py
python/test/unit/language/adv/: test_activation.py  test_matmul.py  test_normalization.py  test_ops.py  test_sort.py
python/test/unit/language/basic/: test_common_api.py  test_data_copy.py  (+12 more)
python/test/unit/runtime/: test_compiler.py  test_config.py
python/tutorials/: README.md
python/tutorials/01_add/: README.md  add.py
python/tutorials/02_add_framework/: README.md  add_framework.py
python/tutorials/03_matmul_mix/: README.md  matmul_mix.py
python/tutorials/04_matmul_cube_only/: README.md  matmul_cube_only.py
python/tutorials/05_matmul_leakyrelu/: README.md  matmul_leakyrelu.py
scripts/: build-bench.sh  oat_check.sh  static_check.sh
test/: CMakeLists.txt  all_task_durations_golden.csv  build_llt.sh  collect_profiling_data.py  lit.cfg  lit.site.cfg.in  run_aftersmoke_test.sh  run_model_test.sh  run_presmoke_model_test.sh  run_presmoke_npu_test.sh  run_smoke_test.sh  run_test.py  run_test.sh
test/Dialect/AscendC/IR/: types.mlir
test/Dialect/AscendC/Transforms/: declare-py-struct.mlir  define-cube-only.mlir  hoist-que-bind.mlir  hoist-ub-allocation.mlir  input-output-tensor.mlir  insert-sync.mlir  materialize-tensor.mlir  noop.mlir  privatize-func.mlir  unify-pipe.mlir
test/Dialect/EmitAsc/IR/: ops.mlir
test/tools/ascendir-opt/: dialects.mlir
test/tools/pyasc/: vadd.py
(+74 files in other folders)
