[build-system]
requires = ["setuptools>=71", "setuptools-scm>=8,<9", "wheel", "pybind11==2.13.1", "cmake>=3.20,<4", "ninja>=1.11.1"]
build-backend = "setuptools.build_meta"

[tool.coverage.paths]
source = ["python/asc", "/**/dist-packages/asc", "/**/site-packages/asc"]

[tool.coverage.report]
omit = ["python/test/*"]

[tool.yapf]
based_on_style = "pep8"
column_limit = 120
disable_split_list_with_comment = true
each_dict_entry_on_separate_line = false
split_before_named_assigns = false
split_complex_comprehension = true

[tool.ruff]
line-length = 120
exclude = ["**/__init__.py"]

[tool.ruff.lint]
ignore = ["E731"]

[tool.isort]
line_length = 120
